cmake_minimum_required(VERSION 3.22)
project(ee205_lab_010d_animal_farm_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(ee205_lab_010d_animal_farm_2 main.cpp addCats.cpp addCats.h Cat.cpp Cat.h config.h catDatabase.cpp catDatabase.h deleteCats.cpp deleteCats.h reportCats.cpp reportCats.h Weight.cpp Weight.h Gender.h Animal.cpp Animal.h Color.h List.cpp List.h Mammal.cpp Mammal.h Node.h SinglyLinkedList.cpp SinglyLinkedList.h)
